изменила паддинги/маржины

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <!-- Герой -->
       <section class="hero">
-        <div class="conteiner-hero">
+        <div class="conteiner">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <a href="" class="button link">Заказать услугу</a>
         </div>
@@ -76,31 +76,37 @@
               <div class="features-img">
                 <img src="./images/icons/Vector.svg" alt="Внимание к деталям" />
               </div>
-              <h3 class="features-title">Внимание к деталям</h3>
-              <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
+              <div class="features-content">
+                <h3 class="features-title">Внимание к деталям</h3>
+                <p class="features-text">
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </div>
             </li>
             <li class="item">
               <div class="features-img">
                 <img src="./images/icons/Vector1.svg" alt="Пунктуальность" />
               </div>
-              <h3 class="features-title">Пунктуальность</h3>
-              <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
+              <div class="features-content">
+                <h3 class="features-title">Пунктуальность</h3>
+                <p class="features-text">
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </div>
             </li>
             <li class="item">
               <div class="features-img">
                 <img src="./images/icons/Vector2.svg" alt="Планирование" />
               </div>
-              <h3 class="features-title">Планирование</h3>
-              <p class="features-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
+              <div class="features-content">
+                <h3 class="features-title">Планирование</h3>
+                <p class="features-text">
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </div>
             </li>
             <li class="item">
               <div class="features-img">
@@ -109,11 +115,13 @@
                   alt="Современные технологии"
                 />
               </div>
-              <h3 class="features-title">Современные технологии</h3>
-              <p class="features-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
+              <div class="features-content">
+                <h3 class="features-title">Современные технологии</h3>
+                <p class="features-text">
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -168,47 +176,49 @@
                 alt="Николай Кучеренко"
                 width="270"
               />
-              <h3 class="team-name">Николай Кучеренко</h3>
-              <p lang="en" class="team-aside">Product Designer</p>
-              <!-- соцсети -->
-              <ul class="team-social list">
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на facebook">
-                    <img
-                      src="./images/icons/facebook.svg"
-                      alt="Николай Кучеренко ссылка на facebook"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на twitter">
-                    <img
-                      src="./images/icons/twitter.svg"
-                      alt="Николай Кучеренко ссылка на twitter"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на instagram">
-                    <img
-                      src="./images/icons/instagram.svg"
-                      alt="Николай Кучеренко ссылка на instagram"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на linkedIn">
-                    <img
-                      src="./images/icons/linkedin.svg"
-                      alt="Николай Кучеренко ссылка на linkedIn"
-                      width="44"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="team-content">
+                <h3 class="team-name">Николай Кучеренко</h3>
+                <p lang="en" class="team-aside">Product Designer</p>
+                <!-- соцсети -->
+                <ul class="team-social list">
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на facebook">
+                      <img
+                        src="./images/icons/facebook.svg"
+                        alt="Николай Кучеренко ссылка на facebook"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на twitter">
+                      <img
+                        src="./images/icons/twitter.svg"
+                        alt="Николай Кучеренко ссылка на twitter"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на instagram">
+                      <img
+                        src="./images/icons/instagram.svg"
+                        alt="Николай Кучеренко ссылка на instagram"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на linkedIn">
+                      <img
+                        src="./images/icons/linkedin.svg"
+                        alt="Николай Кучеренко ссылка на linkedIn"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -216,47 +226,49 @@
                 alt="Ольга Иванова"
                 width="270"
               />
-              <h3 class="team-name">Ольга Иванова</h3>
-              <p lang="en" class="team-aside">Frontend Developer</p>
-              <!-- соцсети -->
-              <ul class="team-social list">
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на facebook">
-                    <img
-                      src="./images/icons/facebook.svg"
-                      alt="Ольга Иванова ссылка на facebook"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на twitter">
-                    <img
-                      src="./images/icons/twitter.svg"
-                      alt="Ольга Иванова ссылка на twitter"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на instagram">
-                    <img
-                      src="./images/icons/instagram.svg"
-                      alt="Ольга Иванова ссылка на instagram"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на linkedIn">
-                    <img
-                      src="./images/icons/linkedin.svg"
-                      alt="Ольга Иванова ссылка на linkedIn"
-                      width="44"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="team-content">
+                <h3 class="team-name">Ольга Иванова</h3>
+                <p lang="en" class="team-aside">Frontend Developer</p>
+                <!-- соцсети -->
+                <ul class="team-social list">
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на facebook">
+                      <img
+                        src="./images/icons/facebook.svg"
+                        alt="Ольга Иванова ссылка на facebook"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на twitter">
+                      <img
+                        src="./images/icons/twitter.svg"
+                        alt="Ольга Иванова ссылка на twitter"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на instagram">
+                      <img
+                        src="./images/icons/instagram.svg"
+                        alt="Ольга Иванова ссылка на instagram"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на linkedIn">
+                      <img
+                        src="./images/icons/linkedin.svg"
+                        alt="Ольга Иванова ссылка на linkedIn"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -264,47 +276,49 @@
                 alt="Андрей Шевченко"
                 width="270"
               />
-              <h3 class="team-name">Андрей Шевченко</h3>
-              <p lang="en" class="team-aside">Marketing</p>
-              <!-- соцсети -->
-              <ul class="team-social list">
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на facebook">
-                    <img
-                      src="./images/icons/facebook.svg"
-                      alt="Андрей Шевченко ссылка на facebook"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на twitter">
-                    <img
-                      src="./images/icons/twitter.svg"
-                      alt="Андрей Шевченко ссылка на twitter"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на instagram">
-                    <img
-                      src="./images/icons/instagram.svg"
-                      alt="Андрей Шевченко ссылка на instagram"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на linkedIn">
-                    <img
-                      src="./images/icons/linkedin.svg"
-                      alt="Андрей Шевченко ссылка на linkedIn"
-                      width="44"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="team-content">
+                <h3 class="team-name">Андрей Шевченко</h3>
+                <p lang="en" class="team-aside">Marketing</p>
+                <!-- соцсети -->
+                <ul class="team-social list">
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на facebook">
+                      <img
+                        src="./images/icons/facebook.svg"
+                        alt="Андрей Шевченко ссылка на facebook"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на twitter">
+                      <img
+                        src="./images/icons/twitter.svg"
+                        alt="Андрей Шевченко ссылка на twitter"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на instagram">
+                      <img
+                        src="./images/icons/instagram.svg"
+                        alt="Андрей Шевченко ссылка на instagram"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на linkedIn">
+                      <img
+                        src="./images/icons/linkedin.svg"
+                        alt="Андрей Шевченко ссылка на linkedIn"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -312,47 +326,50 @@
                 alt="Иван Николаев"
                 width="270"
               />
-              <h3 class="team-name">Иван Николаев</h3>
-              <p lang="en" class="team-aside">UI Designer</p>
-              <!-- соцсети -->
-              <ul class="team-social list">
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на facebook">
-                    <img
-                      src="./images/icons/facebook.svg"
-                      alt="Иван Николаев ссылка на facebook"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на twitter">
-                    <img
-                      src="./images/icons/twitter.svg"
-                      alt="Иван Николаев ссылка на twitter"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на instagram">
-                    <img
-                      src="./images/icons/instagram.svg"
-                      alt="Иван Николаев ссылка на instagram"
-                      width="44"
-                    />
-                  </a>
-                </li>
-                <li class="team-icons">
-                  <a href="" aria-label="ссылка на linkedIn">
-                    <img
-                      src="./images/icons/linkedin.svg"
-                      alt="Иван Николаев ссылка на linkedIn"
-                      width="44"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="team-content">
+                <h3 class="team-name">Иван Николаев</h3>
+                <p lang="en" class="team-aside">UI Designer</p>
+
+                <!-- соцсети -->
+                <ul class="team-social list">
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на facebook">
+                      <img
+                        src="./images/icons/facebook.svg"
+                        alt="Иван Николаев ссылка на facebook"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на twitter">
+                      <img
+                        src="./images/icons/twitter.svg"
+                        alt="Иван Николаев ссылка на twitter"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на instagram">
+                      <img
+                        src="./images/icons/instagram.svg"
+                        alt="Иван Николаев ссылка на instagram"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                  <li class="team-icons">
+                    <a href="" aria-label="ссылка на linkedIn">
+                      <img
+                        src="./images/icons/linkedin.svg"
+                        alt="Иван Николаев ссылка на linkedIn"
+                        width="44"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
