--- a/portfolio.html
+++ b/portfolio.html
@@ -86,161 +86,159 @@
           <!-- Портфолио -->
           <ul class="portfolio list">
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio1.jpg"
-                    alt="Веб-сайт Технокряк"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio1.jpg"
+                  alt="Веб-сайт Технокряк"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-aside">Веб-сайт</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio2.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio2.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="portfolio-aside">Дизайн</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio3.jpg"
-                    alt="Ресторан Seafood"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio3.jpg"
+                  alt="Ресторан Seafood"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-aside">Приложение</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio4.jpg"
-                    alt="Проект Prime"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio4.jpg"
+                  alt="Проект Prime"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-aside">Маркетинг</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio5.jpg"
-                    alt="Проект Boxes"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio5.jpg"
+                  alt="Проект Boxes"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-aside">Приложение</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio6.jpg"
-                    alt="Inspiration has no Borders"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio6.jpg"
+                  alt="Inspiration has no Borders"
+                />
+
+                <div class="portfolio-content">
                   <h2 lang="en" class="portfolio-title">
                     Inspiration has no Borders
                   </h2>
                   <p class="portfolio-aside">Веб-сайт</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio7.jpg"
-                    alt="Издание Limited Edition"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio7.jpg"
+                  alt="Издание Limited Edition"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-aside">Дизайн</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio8.jpg"
-                    alt="Проект LAB"
-                  />
+              <a href="" class="portfolio-link link">
+                <img src="./images/portfolio/portfolio8.jpg" alt="Проект LAB" />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-aside">Маркетинг</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
             <li class="item">
-              <span class="conteiner-portfolio">
-                <a href="" class="portfolio-link link">
-                  <img
-                    src="./images/portfolio/portfolio9.jpg"
-                    alt="Growing Business"
-                  />
+              <a href="" class="portfolio-link link">
+                <img
+                  src="./images/portfolio/portfolio9.jpg"
+                  alt="Growing Business"
+                />
+                <div class="portfolio-content">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-aside">Приложение</p>
-                  <p class="portfolio-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </span>
+                </div>
+                <p class="portfolio-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
             </li>
           </ul>
         </div>
